Fix broken links and google page

--- a/coachmimiblog.html
+++ b/coachmimiblog.html
@@ -157,7 +157,7 @@
 					
 						<div class="col-sm-4 text-right text-center-xs">
 							<ul class="list-inline social-list">
-								<li><a href="https://business.google.com/u/1/b/111659196741059692018/dashboard/l/08649420599990922036"><i class="ti-google"></i></a></li>
+								<li><a href="https://plus.google.com/111659196741059692018"><i class="ti-google"></i></a></li>
 								<li><a href="http://www.yelp.com/biz/coach-mimi-garden-grove"><i class="fa fa-yelp"></i></a></li>
 							</ul>
 						</div>
