--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <h1 class="large uppercase mb16">Coachmimi</h1>
-                        <h5 class="uppercase mb0">Counselor, Consultant, and Mentor</h5>
+                        <h5 class="uppercase mb0">Counselor, Consultant, Relationship Coach, and Mentor</h5>
                     </div>
                 </div>
                 
             </div>
             
             <div class="align-bottom relative-xs text-center">
+                <p><i>As iron sharpens iron, so one man sharpens another -Proverbs 27:17</i></p>
                 <a class="btn btn-lg mb32 mt-xs-40 inner-link" href="#get-started" target="_self">Get sTarted</a>
             </div>
         </section><section class="image-square right">
