--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     
                 <div class="col-sm-12 col-md-5 col-md-pull-2 overflow-hidden-xs">
                     <ul class="menu inline-block pull-right">
-                        <li><a href="http://www.coachmimi.co.kr">한국어 웹 사이트&nbsp;</a></li>
+                        <li>
+                            <a style="font-size:18px;" href="http://www.coachmimi.co.kr">한국어 웹 사이트&nbsp;</a>
+                        </li>
                         <li><a href="#get-started">714.613.4472&nbsp;</a></li>
                         <li><a href="#coaching">Coaching program</a></li>
                         <li><a href="#about">about&nbsp;</a></li>
