fix image bugs for reals

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <br>
     <br>We have worked together on an array of issues. She essentially has helped me to redesign my whole life. I have grown tremendously in all areas of life. Most importantly, she has been a loyal friend helping me grow spiritually and encouraging me to hold fast to the word of God and remain faithful to Him through trials and tribulations. </p>
                                     <div class="quote-author">
-                                        <img alt="Avatar" src="img/client.png">
+                                        <img alt="Avatar" src="img/clientpic.png">
                                         <h6 class="uppercase">JH </h6>
                                         <span>Coach Mimi Client</span>
                                     </div>
@@ -258,7 +258,7 @@
                                 <li>
                                     <p class="lead">I received an assessment session from her over the phone.  I didn't know what to expect but the ~75 minutes ended up being very worthwhile.  She is warm but honest, and she accurately described several things about me that thanks to her, I will take more seriously.  You will gain invaluable things through this time, I strongly recommend :)</p>
                                     <div class="quote-author">
-                                        <img alt="Avatar" src="img/client.png">
+                                        <img alt="Avatar" src="img/clientpic.png">
                                         <h6 class="uppercase">HB</h6>
                                         <span>Coach Mimi Client</span>
                                     </div>
