--- a/coachmimiblog.html
+++ b/coachmimiblog.html
@@ -146,7 +146,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-4">
-							<a href="#"><img class="image-xxs fade-half" alt="Pic" src="img/coachmimilogolight.png"></a>
+							<a href="#"><img class="image-xxs fade-half" alt="Pic" src="img/coachmimilogolighter.png"></a>
 						</div>
 					
 						<div class="col-sm-4 text-center">
