Add testimonials and add korean link
Added korean link above 'get started' button for korean peoples

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             
             <div class="align-bottom relative-xs text-center">
                 <p><i>As iron sharpens iron, so one man sharpens another -Proverbs 27:17</i></p>
-                <a class="btn btn-lg mb32 mt-xs-40 inner-link" href="#get-started" target="_self">Get sTarted</a>
+                <a style="font-size:15px;" href="http://www.coachmimi.co.kr">한국어 웹 사이트&nbsp;</a>
+                <br><br><a class="btn btn-lg mb32 mt-xs-40 inner-link" href="#get-started" target="_self">Get sTarted</a>
             </div>
         </section><section class="image-square right">
             <div class="col-md-6 image">
@@ -260,6 +261,28 @@
                                     <div class="quote-author">
                                         <img alt="Avatar" src="img/clientpic.png">
                                         <h6 class="uppercase">HB</h6>
+                                        <span>Coach Mimi Client</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p class="lead">For a few years, I wanted to find some sort of coaching and/or therapy. I knew it would be something that would benefit me as the years became a bit more stressful and hectic for me. When I had my experiences during periods when I felt down, usually after a few days, it will go away. I bottled a lot of my emotions and the things I was going through, and finally at one point, I could not handle it anymore. I felt highly unmotivated, lost interest in things, became depressed, and woke up every day feeling that there was no purpose to my life and I simply was just existing. 
+
+                                    <br><br> Thankfully, I found Coach Mimi, and she has significantly impacted my life. She cared about me, my well-being, and my journey we went through my sessions. I can tell she genuinely took me, the individual that I am, and what I was going through, seriously. She respected me and attentively listened to me. She gave me a safe and open environment that allowed me to feel comfortable in sharing about me and the experiences I had. During our sessions, she made sure she understood what I was trying to say, asked a lot of questions that allowed me to open up more, and was receptive of everything that I had to say. 
+
+                                    <br><br> Coach Mimi was my very first life coach, and I am forever grateful that I found her. Perhaps there was a reason why I waited this long to get a life coach. Otherwise, I would probably not have met her. Things happen for a reason, and in this case, I am happy that I could meet her. I recommend anyone that needs a life coach to Coach Mimi. She will help you in the areas that you need coaching with. Even if you are unsure, or uncomfortable with getting a life coach, I highly suggest that you at least try it out, and try it out with Coach Mimi. I am positive you will not regret it. 
+
+                                    <br><br>Thank you Coach Mimi for everything.</p>
+                                    <div class="quote-author">
+                                        <img alt="Avatar" src="img/clientpic.png">
+                                        <h6 class="uppercase">KN</h6>
+                                        <span>Coach Mimi Client</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <p class="lead">Thank you Mimi for your help. We've been happier than a barrel full of monkeys since our counseling with you. Hope everything is fine with you. Thanks again</p>
+                                    <div class="quote-author">
+                                        <img alt="Avatar" src="img/clientpic.png">
+                                        <h6 class="uppercase">MC</h6>
                                         <span>Coach Mimi Client</span>
                                     </div>
                                 </li>
