Fix buggy link in mobile version by displaying korean link above button

--- a/index.html
+++ b/index.html
@@ -71,14 +71,16 @@
                         <h5 class="uppercase mb0">Counselor, Consultant, Relationship Coach, and Mentor</h5>
                     </div>
                 </div>
-                
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <p><i>As iron sharpens iron, so one man sharpens another -Proverbs 27:17</i></p>
+                        <a class="korean-link" href="http://www.coachmimi.co.kr">한국어 웹 사이트&nbsp;</a>
+                        <br><br><a class="btn btn-lg mb32 mt-xs-40 inner-link" href="#get-started" target="_self">Get Started</a>
+                    </div>
+                </div>
             </div>
             
-            <div class="align-bottom relative-xs text-center">
-                <p><i>As iron sharpens iron, so one man sharpens another -Proverbs 27:17</i></p>
-                <a style="font-size:15px;" href="http://www.coachmimi.co.kr">한국어 웹 사이트&nbsp;</a>
-                <br><br><a class="btn btn-lg mb32 mt-xs-40 inner-link" href="#get-started" target="_self">Get sTarted</a>
-            </div>
+
         </section><section class="image-square right">
             <div class="col-md-6 image">
                 <div class="background-image-holder">
